[tool.poetry]
name = "Project Babble"
version = "0.2"
description = "Affordable and Fully Opensource Mouth Tracker for VR"
authors = ["SummerSigh", "RedHawk989"]
license = "MIT"
repository = "https://github.com/SummerSigh/ProjectBabble"

[tool.poetry.dependencies]
python = "~3.10.0"
python-osc = "^1.8.0"
requests = "^2.28.1"
opencv-python = "^4.6.0.66"
numpy = "~1.23.5"
pysimplegui = "^4.60.4"
pydantic = "^1.10.2"
pyserial = "^3.5"
winotify = [ 
    { version = "^1.1.0", platform = 'win32' }
]
onnxruntime = "^1.13.1"
onnxruntime-directml = "^1.15.0"
colorama = "^0.4.6"
taskipy = "^1.10.4"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'" }
]
torchvision = [
  {url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.1%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.1%2Bcpu-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'" }
]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyinstaller = "^5.6.2"
flake8 = "^5.0.4"


[tool.taskipy.tasks]
dev = "python babbleapp.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
