[tool.poetry]
name = "Project Babble"
version = "0.2"
description = "Affordable and Fully Opensource Mouth Tracker for VR"
authors = ["SummerSigh", "RedHawk989"]
license = "MIT"
repository = "https://github.com/SummerSigh/ProjectBabble"

[tool.poetry.dependencies]
python = "~3.11.0"
python-osc = "^1.8.0"
requests = "^2.28.1"
opencv-python = "^4.6.0.66"
numpy = "~1.23.5"
pysimplegui = "^4.60.4"
pydantic = "^1.10.2"
pyserial = "^3.5"
winotify = [ 
    { version = "^1.1.0", platform = 'win32' }
]
onnxruntime-directml = "^1.15.0"

colorama = "^0.4.6"
taskipy = "^1.10.4"
pillow = "^11.0.0"
comtypes = "^1.4.8"
pygrabber = "^0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyinstaller = "^5.6.2"
flake8 = "^5.0.4"


[tool.taskipy.tasks]
dev = "python babbleapp.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
